--- a/styleGuide/demo/layout/sticky/default.html
+++ b/styleGuide/demo/layout/sticky/default.html
@@ -46,7 +46,8 @@
 			<div class="api-body">
 				<dl>
           <dt>설명</dt>					
-          <dd><span class="icon"></span> top, bottom, left, right 중 1가지 값을 필수 값으로 넣어야 한다. </dd>
+          <dd><span class="icon"></span> position: sticky; 를 사용하면 [top, bottom, left, right] 중 1가지 값을 필수 값으로 넣어야 한다. </dd>
+          <dd><span class="icon"></span> sticky는 부모 컨테이너에 종속된다. </dd>
 				</dl>
 				
           <table class="table_col" summary="생성되는 class 설명">
