--- a/asset/css/common.css
+++ b/asset/css/common.css
@@ -19,6 +19,13 @@ a:link, a:visited  { text-decoration:none; color:#333; }
 a:active, a:hover, a:focus, .link_line { text-decoration:underline; }
 pre { tab-size: 4; }
 
+.fz12 { font-size:12px; }
+.fz14 { font-size:14px; }
+.fz16 { font-size:16px; }
+.fz18 { font-size:18px; }
+.fz20 { font-size:20px; }
+
+
 /* 공통:gnb-style */
 .ifr_cont { border-left:1px solid #505d8e; }
 .head {  margin:0; padding:10px; height:68px; min-width:1130px;  border-bottom:1px solid #505d8e; overflow:hidden}
