--- a/styleGuide/demo/layout/grid/default.html
+++ b/styleGuide/demo/layout/grid/default.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="ko" xml:lang="ko">
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" /> 
-<title>flex | TRpackage</title>
+<title>grid | TRpackage</title>
 <script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.js" charset="UTF-8"></script>
 <link rel="stylesheet" type="text/css"  href="../../../../asset/css/common.css" media="all" />
 <link rel="stylesheet" type="text/css"  href="../../../../asset/css/trpBase.css" media="all" />
@@ -40,6 +40,7 @@
 				<dl>
           <dt>설명</dt>					
           <dd><span class="icon"></span> css3 정열 방법 (wrap) (IE 11) </dd>
+          <dd><span class="icon"></span> 2차원적 구조를 가짐 </dd>
 				</dl>
 				
           <table class="table_col" summary="생성되는 class 설명">
@@ -54,22 +55,55 @@
                 <th scope="col">컨테이너 property 설명</th>
               </tr>
               <tr>
-                <td><strong class="fz14">flex-direction</strong>:[ <strong>row</strong>, column]</td>
+                <td><strong class="fz14">grid-auto-flow:</strong>: [<strong>row</strong>, column]</td>
                 <td>
-                  정열 방향 성 (중심선)<br>
-                  - row     : 가로 방향  (↔)<br>
-                  - column  : 세로 방향 (↕)                         
+                  정열 방향 <br>
+                  - row : 가로 방향 (↔) <br>
+                  - column : 세로 방향 (↕) <br>
+                </td>
+              </tr>  
+              <tr>
+                <td><strong class="fz14">grid-template-columns</strong>: (px, %, fr, ...)</td>
+                <td>
+                  가로 크기 패턴 정의 (1fr 나머지크기, 모두 fr 이면 비율로 적용) <br>
+                  - grid-template-columns: 200px 200px 200px;<br>
+                  - grid-template-columns: repeat(3, 30%);  
+                  - grid-template-columns: 200px 100px 1fr;             
                 </td>
               </tr>
               <tr>
-                <td><strong class="fz14">flex-wrap</strong>: [ <strong>nowrap</strong>, wrap, wrap-reverse]</td>
+                <td><strong class="fz14">grid-template-row</strong>: (px, %, fr, ...)</td>
                 <td>
-                  "flex-direction"속성이 "row" 일대 유연함 적용<br>
-                  - nowrap : 유연함 적용안함, 줄바굼 되지 않도록함. <br>
-                  - wrap : 유연함 적용, 유연하게 항목 줄바꿈 <br>
-                  - wrap-reverse : 유연함 적용, "wrap" 반대로 줄바꿈
+                  가로 크기 패턴 정의 (1fr 나머지크기, 모두 fr 이면 비율로 적용) <br>
+                  - grid-template-row: 200px 200px 200px;<br>
+                  - grid-template-row: repeat(3, 30%);  
+                  - grid-template-row: 200px 100px 1fr;             
                 </td>
               </tr>     
+              <tr>
+                <td><strong class="fz14">grid-auto-columns:</strong>: (px, %, auto, ...)</td>
+                <td>
+                  가로 크기지정 (auto 부족한 영역을 채워줌) <br>
+                  - grid-auto-columns: 200px;<br>
+                  - grid-auto-columns: minmax(100px, auto); (최소값, 최대값);  
+                </td>
+              </tr>     
+              <tr>
+                <td><strong class="fz14">grid-auto-rows:</strong>: (px, %, auto, ...)</td>
+                <td>
+                  세로 크기지정 (auto 부족한 영역을 채워줌) <br>
+                  - grid-auto-rows: 200px;<br>
+                  - grid-auto-row: minmax(100px, auto); (최소값, 최대값)<br>  
+                </td>
+              </tr>     
+              <tr>
+                <td><strong class="fz14">grid-gap</strong>: (px, %, ...)</td>
+                <td>
+                  그리트 아이템 간격 (위아래, 좌우) <br>
+                  - grid-gap: 20px 10px;<br>
+                </td>
+              </tr>    
+              
               <tr>
                 <td><strong class="fz14">align-content</strong>: [ <strong>normal</strong>, center, flex-start, flex-end, space-around, space-between, stretch]</td>
                 <td>
@@ -108,6 +142,7 @@
                   - baseline      : 텍스트기중
                 </td>
               </tr>
+              
 
             </tbody>
           </table>
@@ -120,59 +155,31 @@
             </colgroup>
             <tbody>
               <tr>
-                <th scope="col">컨테이너 아이템 property 이름</th>
-                <th scope="col">컨테이너 아이템 property 설명</th>
+                <th scope="col">아이템 property 이름</th>
+                <th scope="col">아이템 property 설명</th>
               </tr>
               <tr>
-                <td><strong class="fz14">flex </strong>: <br>[(px | %), <br>(flex-grow, flex-shrink, flex-basis)]</td>
+                <td><strong class="fz14">grid-area</strong>: name</td>
                 <td>
-                  단일 크기 지정 <br>
-                  - (flex-grow, flex-shrink, flex-basis) <br>
-                    기본값 : 	0 1 auto 
+                  아이템 이름 지어주기, 아래 내용에서 컬럼 번호 대신 이름으로 사용할 수 있다. <br>
+                  - grid-area: 이름<br>
+                </td>
+              </tr>  
+              <tr>
+                <td><strong class="fz14">grid-area, grid-row-start, grid-column-start, grid-row-end, grid-column-end </strong>: (number, name)</td>
+                <td>
+                   번호 , 위치
+                  - grid-area : grid-row-start  grid-column-start  grid-row-end  grid-column-end<br>
+                  - grid-column : grid-column-start grid-column-end<br>
+                  - grid-row : grid-row-start grid-row-end<br>
+                  <br>
+                  - grid-row-start : 2 | span 2; 시작위치 | 시작위치까지 채움<br>
+                  - grid-column-start : 2 | span 2; 시작위치 | 시작위치까지 채움 <br>
+                  - grid-row-end  : 3 | span 2; 끝위치 앞에까지 | 끝위치까지 채움<br>
+                  - grid-column-end : 3 | span 2; 끝위치 앞에까지 | 끝위치까지 채움 <br>
                 </td>
               </tr>     
-              <tr>
-                <td><strong class="fz14">flex-grow</strong> : number</td>
-                <td>
-                  아이템이 얼마나 커질지 비율을 정하는 속성<br>
-                  - 0 : 크기 증가 없음 <br>
-                  - 1 : 크기 증가 함 <br>
-                  - 2 : 크기 증가 함 
-                </td>
-              </tr>
-              <tr>
-                <td><strong class="fz14">flex-shrink</strong> : number</td>
-                <td>
-                  아이템이 얼마나 작아질지 비율을 정하는 속성<br>
-                  - 0 : 크기 증가 없음 <br>
-                  - 1 : 크기 증가 함 <br>
-                  - 2 : 크기 증가 함 
-                </td>
-              </tr>          
-              <tr>
-                <td><strong class="fz14">flex-basis</strong> : (px | %)</td>
-                <td>
-                  초기 크기 지정<br>
-                </td>
-              </tr>
-              <tr>
-                <td><strong class="fz14">align-self</strong> : </td>
-                <td>
-                  align-items     : 설정 재정의<br>
-                  - auto          : align-items 속성 값 사용<br>
-                  - stretch       : 컨테이너 크기만큼 여백없이 정열 <br>
-                  - center        : 중앙 정열 <br>
-                  - flex-start    : 시작점에서 부터 정열 <br>
-                  - flex-end      : 끝나는점에서 부터 정열 <br>
-                  - baseline      : 텍스트기준 하단 <br>
-                </td>
-              </tr>
-              <tr>
-                <td><strong class="fz14">order</strong> : number</td>
-                <td>
-                  플렉스 항목의 순서지정 
-                </td>
-              </tr>
+        
             </tbody>
           </table>
 
@@ -201,6 +208,8 @@
 					<div class="api-body_h3 css">
                     <!-- 소스 -->
 
+
+
 <!-- HTML generated using hilite.me --><div style="background: #272822; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><table><tr><td><pre style="margin: 0; line-height: 125%"> 1
   2
   3
@@ -212,47 +221,20 @@
   9
  10
  11
- 12
- 13
- 14
- 15
- 16
- 17
- 18
- 19
- 20
- 21
- 22
- 23
- 24
- 25
- 26</pre></td><td><pre style="margin: 0; line-height: 125%"><span style="color: #f92672">&lt;style </span><span style="color: #a6e22e">type=</span><span style="color: #e6db74">&quot;text/css&quot;</span><span style="color: #f92672">&gt;</span>
+ 12</pre></td><td><pre style="margin: 0; line-height: 125%"><span style="color: #f92672">&lt;style </span><span style="color: #a6e22e">type=</span><span style="color: #e6db74">&quot;text/css&quot;</span><span style="color: #f92672">&gt;</span>
    <span style="color: #f92672">body,</span> <span style="color: #f92672">html</span> <span style="color: #f8f8f2">{</span> <span style="color: #66d9ef">height</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">100</span><span style="color: #f92672">%</span><span style="color: #f8f8f2">;</span> <span style="color: #f8f8f2">}</span>
  
    <span style="color: #a6e22e">.wrap</span> <span style="color: #f8f8f2">{</span> <span style="color: #f8f8f2">box</span><span style="color: #f92672">-</span><span style="color: #f8f8f2">sizing</span><span style="color: #f92672">:</span> <span style="color: #66d9ef">border</span><span style="color: #f92672">-</span><span style="color: #f8f8f2">box;</span> <span style="color: #66d9ef">height</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">50</span><span style="color: #f92672">%</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">margin</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">30px</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">background-color</span><span style="color: #f92672">:</span> <span style="color: #f8f8f2">antiquewhite;</span>
-     <span style="color: #66d9ef">display</span><span style="color: #f92672">:</span> <span style="color: #f8f8f2">flex;</span>
-     <span style="color: #75715e">/* 중심선 방향  (row : ↔) (column : ↕ ) */</span>
-     <span style="color: #f8f8f2">flex</span><span style="color: #f92672">-</span><span style="color: #66d9ef">direction</span><span style="color: #f92672">:</span> <span style="color: #f8f8f2">row;</span>   
-     <span style="color: #f8f8f2">flex</span><span style="color: #f92672">-</span><span style="color: #f8f8f2">wrap</span><span style="color: #f92672">:</span> <span style="color: #f8f8f2">wrap;</span>
-     <span style="color: #75715e">/*</span>
- <span style="color: #75715e">    </span>
- <span style="color: #75715e">      - center        : 중앙 정열</span>
- <span style="color: #75715e">      - flex-start    : 시작점에서 부터 정열</span>
- <span style="color: #75715e">      - flex-end      : 끝나는점에서 부터 정열</span>
- <span style="color: #75715e">      - space-around  : 중심으로부터 아이템에 같은 여백을 줘서 정열</span>
- <span style="color: #75715e">      - space-evenly  : 아이템 간격이 동일하게 정열</span>
- <span style="color: #75715e">      - space-between : 중심 약끝으로 부터 정열</span>
- <span style="color: #75715e">      - stretch       : 컨테이너 크기만큼 여백없이 정열  </span>
- <span style="color: #75715e">    </span>
- <span style="color: #75715e">    */</span>
-     <span style="color: #f8f8f2">align</span><span style="color: #f92672">-</span><span style="color: #66d9ef">content</span><span style="color: #f92672">:</span> <span style="color: #66d9ef">normal</span><span style="color: #f8f8f2">;</span>     
-     <span style="color: #66d9ef">justify</span><span style="color: #f92672">-</span><span style="color: #66d9ef">content</span><span style="color: #f92672">:</span> <span style="color: #f8f8f2">flex</span><span style="color: #f92672">-</span><span style="color: #f8f8f2">start;</span>
-     <span style="color: #f8f8f2">align</span><span style="color: #f92672">-</span><span style="color: #f8f8f2">items</span><span style="color: #f92672">:</span> <span style="color: #66d9ef">normal</span>
+     <span style="color: #66d9ef">display</span><span style="color: #f92672">:</span> <span style="color: #f8f8f2">grid;</span>
+     <span style="color: #f8f8f2">grid</span><span style="color: #f92672">-</span><span style="color: #f8f8f2">template</span><span style="color: #f92672">-</span><span style="color: #f8f8f2">columns</span><span style="color: #f92672">:</span> <span style="color: #66d9ef">repeat</span><span style="color: #f8f8f2">(</span><span style="color: #ae81ff">3</span><span style="color: #f92672">,</span> <span style="color: #ae81ff">30</span><span style="color: #f92672">%</span><span style="color: #f8f8f2">);</span> 
+     <span style="color: #f8f8f2">grid</span><span style="color: #f92672">-</span><span style="color: #66d9ef">auto</span><span style="color: #f92672">-</span><span style="color: #f8f8f2">rows</span><span style="color: #f92672">:</span> <span style="color: #f8f8f2">minmax(</span><span style="color: #ae81ff">100px</span><span style="color: #f92672">,</span> <span style="color: #66d9ef">auto</span><span style="color: #f8f8f2">);</span>
+     <span style="color: #f8f8f2">grid</span><span style="color: #f92672">-</span><span style="color: #f8f8f2">gap</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">10</span><span style="color: #f92672">%</span> <span style="color: #ae81ff">0px</span><span style="color: #f8f8f2">;</span>
    <span style="color: #f8f8f2">}</span>
    <span style="color: #75715e">/* 아이템 width는 최소값으로 반영된다고 보면 됩니다. */</span>
-   <span style="color: #a6e22e">.wrap</span> <span style="color: #a6e22e">.item</span> <span style="color: #f8f8f2">{</span> <span style="color: #66d9ef">width</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">30</span><span style="color: #f92672">%</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">min-height</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">30px</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">outline</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">1px</span> <span style="color: #66d9ef">solid</span> <span style="color: #ae81ff">#f73</span><span style="color: #f8f8f2">;</span> <span style="color: #f8f8f2">}</span>
+   <span style="color: #a6e22e">.wrap</span> <span style="color: #a6e22e">.item</span> <span style="color: #f8f8f2">{</span> <span style="color: #66d9ef">min-height</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">30px</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">outline</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">1px</span> <span style="color: #66d9ef">solid</span> <span style="color: #ae81ff">#f73</span><span style="color: #f8f8f2">;</span> <span style="color: #f8f8f2">}</span>
  <span style="color: #f92672">&lt;/style&gt;</span>
  </pre></td></tr></table></div>
+ 
  
 
 
@@ -271,7 +253,7 @@
                     <!-- 소스 -->
 
 
-                    
+
 <!-- HTML generated using hilite.me --><div style="background: #272822; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><table><tr><td><pre style="margin: 0; line-height: 125%">1
   2
   3
@@ -290,7 +272,7 @@
   
     <span style="color: #f92672">&lt;/div&gt;</span>
   </pre></td></tr></table></div>
-                                                                          
+                      
                                                                                                                                                                                     
                     
                     <!-- //소스 -->
