--- a/responsive/demo/layout/containerQueries/ex01.html
+++ b/responsive/demo/layout/containerQueries/ex01.html
@@ -39,7 +39,7 @@
 <body>
 
 	<div class="containerQuery">
-		<div><strong>데스크탑 중심</strong> </div>
+		<div><strong>컨테이너 쿼리</strong> </div>
 		<div> 컨테이너 크기 : <strong class="widthSize">0</strong>px </div>
 		<div> deafult : 1280px 초과</div>
 		<div> width : 1280px 까지</div>
