--- a/asset/css/trpBase.css
+++ b/asset/css/trpBase.css
@@ -730,7 +730,7 @@ a:link, a:visited{ cursor: pointer; }
       overflow: hidden;text-overflow: ellipsis;white-space: nowrap;word-wrap: normal;
     }
   }
-/** ================= responsive ================= **/
+/** // ================= responsive ================= **/
 
 
 
@@ -740,4 +740,42 @@ a:link, a:visited{ cursor: pointer; }
 
 
 
+/** ================= mediaQuery ================= **/
+  /* VIEW Other mediaQuery : 다른 미디어쿼리 */
+  .mediaQuery { display: flex; flex-direction: column; align-items: center; justify-content: center; 
+    padding: 20px 10px;
+    font-size: 22px; font-weight: bold; background-color: #eee;
+  } 
+  .mediaQuery>div{ font-size: 17px;
+    border: 3px solid #333; padding: 20px 10px; margin: 10px 0;
+    background-color: #eee;
+  }
+  .mediaQuery span{ font-weight: bold;font-size: 20px; }
+  .mediaQuery:has(.c1) .c1 { border: 3px solid #3f3; }
+  .mediaQuery:has(.c2) .c2 { border: 3px solid #d35; }
+  .mediaQuery:has(.c3) .c3 { border: 3px solid #777; }
+  .mediaQuery:has(.c4) .c4 { border: 3px solid #369; }
 
+
+  /* 화면 방향 : 가로 | 세로 [landscape | portrait] 
+  */
+  @media (orientation: landscape) {
+    .mediaQuery .c1 { background-color: #3f3; }
+  }
+
+  /* 해상도 : 레티나 해상도 */
+  @media (min-resolution: 2dppx) {
+    .mediaQuery .c2 { background-color: #d35; }
+  }
+
+  /* 시스템 설정 모드 : [light | dark] */
+  @media (prefers-color-scheme: dark) {
+    .mediaQuery .c3{ background-color: #777; }
+  }
+
+  /* hover 지원 : pc, mobile[hover, none]*/
+  @media (hover: hover) {
+    .mediaQuery .c4 { background-color: #369 }
+  }
+/** //================= mediaQuery ================= **/
+  
