--- a/responsive/demo/layout/mediaQueries/default.html
+++ b/responsive/demo/layout/mediaQueries/default.html
@@ -5,6 +5,7 @@
 <title>media query | TR package </title>
 <script type="text/javascript" src="../../../../asset/js/libs/jquery-1.11.1.js" charset="UTF-8"></script>
 <link rel="stylesheet" type="text/css"  href="../../../../asset/css/common.css" media="all" />
+<link rel="stylesheet" type="text/css"  href="../../../../asset/css/trpBase.css" media="all" />
 
 
 </head>
@@ -36,8 +37,10 @@
 				</dl>
 				@media screen and (width <= 1280px)
 
+
+				<!-- VIEW max(css) pc => mb  -->
 				<div class="ex_wapper">
-					<h3 class="api-title_h3">VIEW max(css)</h3>
+					<h3 class="api-title_h3">VIEW max(css) pc => mb </h3>
 					<!-- <p class="ex-more"><a href="javascript:return false;"><span class="d-n">+</span><span style="display: inline;">-</span></a></p> -->
 					<p class="ex-view"><a href="ex01.html" target="_blank">View Sample</a></p>
 					<div class="ex-body d-n" >
@@ -102,9 +105,7 @@
 
 
 
-
-
-
+				<!-- VIEW max(html) -->
 				<div class="ex_wapper">
 					<h3 class="api-title_h3">VIEW max(html)</h3>
 					<!-- <p class="ex-more"><a href="javascript:return false;"><span class="d-n">+</span><span style="display: inline;">-</span></a></p> -->
@@ -138,16 +139,14 @@
 					
 
 
-
+				<!-- VIEW min(css) mb => pc -->
 				<div class="ex_wapper">
-					<h3 class="api-title_h3">VIEW min(css)</h3>
+					<h3 class="api-title_h3">VIEW min(css) mb => pc</h3>
 					<!-- <p class="ex-more"><a href="javascript:return false;"><span class="d-n">+</span><span style="display: inline;">-</span></a></p> -->
 					<p class="ex-view"><a href="ex03.html" target="_blank">View Sample</a></p>
 					<div class="ex-body d-n" >
 
-
 <div class="mediaQuery"></div>
-
 
 					</div>
 				</div>
@@ -197,10 +196,113 @@
 
 
 
-
 					</div>
 				</div>
 
+
+				<!-- VIEW Other mediaQuery -->
+				<div class="ex_wapper">
+					<h3 class="api-title_h3">VIEW Other mediaQuery</h3>
+					<p class="ex-more"><a href="javascript:return false;"><span class="d-n">+</span><span style="display: inline;">-</span></a></p>
+					<p class="ex-view"><a href="ex04.html" target="_blank">View Sample</a></p>
+					<div class="ex-body d-n" >
+
+	<div class="mediaQuery">
+		<div><strong>미디이쿼리 적용될때 <br> (border-color, background-color) 같아짐</strong></div>
+		<div class="c1"> @media (orientation: portrait) {} = <br> <span>가로 방향일때</span> </div>
+		<div class="c2"> @media (min-resolution: 2dppx) {} = <br> <span>레티나 해상도일때</span></div>
+		<div class="c3"> @media (prefers-color-scheme: dark) {} = <br> <span>ligth , dark모드일때</span></div>
+		<div class="c4"> @media (hover: hover) {} = <br> <span>hover 지원 될때  (PC)</span></div>
+	</div>
+
+
+					</div>
+				</div>
+				
+				<div class="ex_wapper">
+					<h3 class="api-title_h3 css">CSS</h3>
+					<div class="api-body_h3 css">
+
+
+
+
+<!-- HTML generated using hilite.me --><div style="background: #272822; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><table><tr><td><pre style="margin: 0; line-height: 125%;"> 1
+ 2
+ 3
+ 4
+ 5
+ 6
+ 7
+ 8
+ 9
+10
+11
+12
+13
+14
+15
+16
+17
+18
+19
+20
+21
+22
+23
+24
+25
+26
+27
+28
+29
+30
+31
+32
+33
+34
+35</pre></td><td><pre style="margin: 0; line-height: 125%;"><span></span><span style="color: #F8F8F2">.</span><span style="color: #A6E22E">mediaQuery</span><span style="color: #F8F8F2"> { </span><span style="color: #66D9EF">display</span><span style="color: #F8F8F2">: </span><span style="color: #66D9EF">flex</span><span style="color: #F8F8F2">; </span><span style="color: #66D9EF">flex-direction</span><span style="color: #F8F8F2">: </span><span style="color: #66D9EF">column</span><span style="color: #F8F8F2">; </span><span style="color: #66D9EF">align-items</span><span style="color: #F8F8F2">: </span><span style="color: #66D9EF">center</span><span style="color: #F8F8F2">; </span><span style="color: #66D9EF">justify-content</span><span style="color: #F8F8F2">: </span><span style="color: #66D9EF">center</span><span style="color: #F8F8F2">; </span>
+<span style="color: #F8F8F2">	</span><span style="color: #66D9EF">padding</span><span style="color: #F8F8F2">: </span><span style="color: #AE81FF">20</span><span style="color: #66D9EF">px</span><span style="color: #F8F8F2"> </span><span style="color: #AE81FF">10</span><span style="color: #66D9EF">px</span><span style="color: #F8F8F2">;</span>
+<span style="color: #F8F8F2">	</span><span style="color: #66D9EF">font-size</span><span style="color: #F8F8F2">: </span><span style="color: #AE81FF">22</span><span style="color: #66D9EF">px</span><span style="color: #F8F8F2">; </span><span style="color: #66D9EF">font-weight</span><span style="color: #F8F8F2">: </span><span style="color: #66D9EF">bold</span><span style="color: #F8F8F2">; </span><span style="color: #66D9EF">background-color</span><span style="color: #F8F8F2">: </span><span style="color: #AE81FF">#eee</span><span style="color: #F8F8F2">;</span>
+<span style="color: #F8F8F2">} </span>
+<span style="color: #F8F8F2">.</span><span style="color: #A6E22E">mediaQuery</span><span style="color: #FF4689">&gt;div</span><span style="color: #F8F8F2">{ </span><span style="color: #66D9EF">font-size</span><span style="color: #F8F8F2">: </span><span style="color: #AE81FF">17</span><span style="color: #66D9EF">px</span><span style="color: #F8F8F2">;</span>
+<span style="color: #F8F8F2">	</span><span style="color: #66D9EF">border</span><span style="color: #F8F8F2">: </span><span style="color: #AE81FF">3</span><span style="color: #66D9EF">px</span><span style="color: #F8F8F2"> </span><span style="color: #66D9EF">solid</span><span style="color: #F8F8F2"> </span><span style="color: #AE81FF">#333</span><span style="color: #F8F8F2">; </span><span style="color: #66D9EF">padding</span><span style="color: #F8F8F2">: </span><span style="color: #AE81FF">20</span><span style="color: #66D9EF">px</span><span style="color: #F8F8F2"> </span><span style="color: #AE81FF">10</span><span style="color: #66D9EF">px</span><span style="color: #F8F8F2">; </span><span style="color: #66D9EF">margin</span><span style="color: #F8F8F2">: </span><span style="color: #AE81FF">10</span><span style="color: #66D9EF">px</span><span style="color: #F8F8F2"> </span><span style="color: #AE81FF">0</span><span style="color: #F8F8F2">;</span>
+<span style="color: #F8F8F2">	</span><span style="color: #66D9EF">background-color</span><span style="color: #F8F8F2">: </span><span style="color: #AE81FF">#eee</span><span style="color: #F8F8F2">;</span>
+<span style="color: #F8F8F2">}</span>
+<span style="color: #F8F8F2">.</span><span style="color: #A6E22E">mediaQuery</span><span style="color: #F8F8F2"> </span><span style="color: #FF4689">span</span><span style="color: #F8F8F2">{ </span><span style="color: #66D9EF">font-weight</span><span style="color: #F8F8F2">: </span><span style="color: #66D9EF">bold</span><span style="color: #F8F8F2">;</span><span style="color: #66D9EF">font-size</span><span style="color: #F8F8F2">: </span><span style="color: #AE81FF">20</span><span style="color: #66D9EF">px</span><span style="color: #F8F8F2">; }</span>
+<span style="color: #F8F8F2">.</span><span style="color: #A6E22E">mediaQuery</span><span style="color: #F8F8F2">:</span><span style="color: #A6E22E">has</span><span style="color: #FF4689">(</span><span style="color: #F8F8F2">.</span><span style="color: #A6E22E">c1</span><span style="color: #FF4689">)</span><span style="color: #F8F8F2"> .</span><span style="color: #A6E22E">c1</span><span style="color: #F8F8F2"> { </span><span style="color: #66D9EF">border</span><span style="color: #F8F8F2">: </span><span style="color: #AE81FF">3</span><span style="color: #66D9EF">px</span><span style="color: #F8F8F2"> </span><span style="color: #66D9EF">solid</span><span style="color: #F8F8F2"> </span><span style="color: #AE81FF">#3f3</span><span style="color: #F8F8F2">; }</span>
+<span style="color: #F8F8F2">.</span><span style="color: #A6E22E">mediaQuery</span><span style="color: #F8F8F2">:</span><span style="color: #A6E22E">has</span><span style="color: #FF4689">(</span><span style="color: #F8F8F2">.</span><span style="color: #A6E22E">c2</span><span style="color: #FF4689">)</span><span style="color: #F8F8F2"> .</span><span style="color: #A6E22E">c2</span><span style="color: #F8F8F2"> { </span><span style="color: #66D9EF">border</span><span style="color: #F8F8F2">: </span><span style="color: #AE81FF">3</span><span style="color: #66D9EF">px</span><span style="color: #F8F8F2"> </span><span style="color: #66D9EF">solid</span><span style="color: #F8F8F2"> </span><span style="color: #AE81FF">#d35</span><span style="color: #F8F8F2">; }</span>
+<span style="color: #F8F8F2">.</span><span style="color: #A6E22E">mediaQuery</span><span style="color: #F8F8F2">:</span><span style="color: #A6E22E">has</span><span style="color: #FF4689">(</span><span style="color: #F8F8F2">.</span><span style="color: #A6E22E">c3</span><span style="color: #FF4689">)</span><span style="color: #F8F8F2"> .</span><span style="color: #A6E22E">c3</span><span style="color: #F8F8F2"> { </span><span style="color: #66D9EF">border</span><span style="color: #F8F8F2">: </span><span style="color: #AE81FF">3</span><span style="color: #66D9EF">px</span><span style="color: #F8F8F2"> </span><span style="color: #66D9EF">solid</span><span style="color: #F8F8F2"> </span><span style="color: #AE81FF">#777</span><span style="color: #F8F8F2">; }</span>
+<span style="color: #F8F8F2">.</span><span style="color: #A6E22E">mediaQuery</span><span style="color: #F8F8F2">:</span><span style="color: #A6E22E">has</span><span style="color: #FF4689">(</span><span style="color: #F8F8F2">.</span><span style="color: #A6E22E">c4</span><span style="color: #FF4689">)</span><span style="color: #F8F8F2"> .</span><span style="color: #A6E22E">c4</span><span style="color: #F8F8F2"> { </span><span style="color: #66D9EF">border</span><span style="color: #F8F8F2">: </span><span style="color: #AE81FF">3</span><span style="color: #66D9EF">px</span><span style="color: #F8F8F2"> </span><span style="color: #66D9EF">solid</span><span style="color: #F8F8F2"> </span><span style="color: #AE81FF">#369</span><span style="color: #F8F8F2">; }</span>
+
+
+<span style="color: #959077">/* 화면 방향 : 가로 | 세로 [landscape | portrait] </span>
+<span style="color: #959077">*/</span>
+<span style="color: #F8F8F2">@</span><span style="color: #66D9EF">media</span><span style="color: #F8F8F2"> </span><span style="color: #FF4689">(orientation:</span><span style="color: #F8F8F2"> </span><span style="color: #FF4689">landscape)</span><span style="color: #F8F8F2"> {</span>
+<span style="color: #F8F8F2">	.</span><span style="color: #A6E22E">mediaQuery</span><span style="color: #F8F8F2"> .</span><span style="color: #A6E22E">c1</span><span style="color: #F8F8F2"> { </span><span style="color: #66D9EF">background-color</span><span style="color: #F8F8F2">: </span><span style="color: #AE81FF">#3f3</span><span style="color: #F8F8F2">; }</span>
+<span style="color: #F8F8F2">}</span>
+
+<span style="color: #959077">/* 해상도 : 레티나 해상도 */</span>
+<span style="color: #F8F8F2">@</span><span style="color: #66D9EF">media</span><span style="color: #F8F8F2"> </span><span style="color: #FF4689">(min-resolution:</span><span style="color: #F8F8F2"> </span><span style="color: #FF4689">2dppx)</span><span style="color: #F8F8F2"> {</span>
+<span style="color: #F8F8F2">	.</span><span style="color: #A6E22E">mediaQuery</span><span style="color: #F8F8F2"> .</span><span style="color: #A6E22E">c2</span><span style="color: #F8F8F2"> { </span><span style="color: #66D9EF">background-color</span><span style="color: #F8F8F2">: </span><span style="color: #AE81FF">#d35</span><span style="color: #F8F8F2">; }</span>
+<span style="color: #F8F8F2">}</span>
+
+<span style="color: #959077">/* 시스템 설정 모드 : [light | dark] */</span>
+<span style="color: #F8F8F2">@</span><span style="color: #66D9EF">media</span><span style="color: #F8F8F2"> </span><span style="color: #FF4689">(prefers-color-scheme:</span><span style="color: #F8F8F2"> </span><span style="color: #FF4689">dark)</span><span style="color: #F8F8F2"> {</span>
+<span style="color: #F8F8F2">	.</span><span style="color: #A6E22E">mediaQuery</span><span style="color: #F8F8F2"> .</span><span style="color: #A6E22E">c3</span><span style="color: #F8F8F2">{ </span><span style="color: #66D9EF">background-color</span><span style="color: #F8F8F2">: </span><span style="color: #AE81FF">#777</span><span style="color: #F8F8F2">; }</span>
+<span style="color: #F8F8F2">}</span>
+
+<span style="color: #959077">/* hover 지원 : pc, mobile[hover, none]*/</span>
+<span style="color: #F8F8F2">@</span><span style="color: #66D9EF">media</span><span style="color: #F8F8F2"> </span><span style="color: #FF4689">(hover:</span><span style="color: #F8F8F2"> </span><span style="color: #FF4689">hover)</span><span style="color: #F8F8F2"> {</span>
+<span style="color: #F8F8F2">	.</span><span style="color: #A6E22E">mediaQuery</span><span style="color: #F8F8F2"> .</span><span style="color: #A6E22E">c4</span><span style="color: #F8F8F2"> { </span><span style="color: #66D9EF">background-color</span><span style="color: #F8F8F2">: </span><span style="color: #AE81FF">#369</span><span style="color: #F8F8F2"> }</span>
+<span style="color: #F8F8F2">}</span>
+</pre></td></tr></table></div>
+
+
+
+
+
+					</div>
+				</div>
 
 
 		
@@ -208,6 +310,16 @@
 		</div>
 		<!-- e: api 설명 -->
 		
+
+
+
+
+
+
+
+
+
+
 	
   </div>		
 	<!-- e: 컨텐츠 끝 -->
