--- a/asset/css/trpBase.css
+++ b/asset/css/trpBase.css
@@ -466,7 +466,14 @@ a:link, a:visited{ cursor: pointer; }
 /** trp_loader  **/
  .trp_shadow {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
+  }
+
+/** trp_glass  **/
+  .trp_glass {
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+  }
 
 
 /** trp_loader  **/
